fix mobile card layout issues

--- a/src/stylesheets/ViewRecipes.css
+++ b/src/stylesheets/ViewRecipes.css
@@ -19,7 +19,6 @@
 }
 
 .card-content-container-skeleton .MuiSkeleton-root {
-  width: 100%;
   height: 50px;
   margin-top: -10px;
 }
@@ -40,7 +39,6 @@ img.MuiCardMedia-root {
 } */
 
 .MuiCardMedia-root .MuiSkeleton-root {
-  width: 100%;
   height: 140px;
 }
 
@@ -52,7 +50,6 @@ img.MuiCardMedia-root {
 
 .MuiCardContent-root.card-content {
   flex: 1;
-  width: 100%;
   padding: 10px;
   height: 100%;
 }
@@ -86,7 +83,6 @@ img.MuiCardMedia-root {
 
 .card-content {
   flex: 1;
-  width: 100%;
   height: 100%;
   padding: 10px;
   background-color: white;
